--- a/app/components/ambari-sidebar.hbs
+++ b/app/components/ambari-sidebar.hbs
@@ -1,22 +1,26 @@
- <div id="side-nav" class="navigation-bar" {{did-insert this.testDid}}>
-    <div class="navigation-bar-container">
-    <ul class="side-nav-header nav nav-pills nav-stacked">
-      <li class="navigation-header">
-        <a href="#" class="ambari-logo">
-          <img src="/img/ambari-logo.png" alt="Apache Ambari" title="Apache Ambari">
+<div id='side-nav' class='navigation-bar' {{did-insert this.testDid}}>
+  <div class='navigation-bar-container'>
+    <ul class='side-nav-header nav nav-pills nav-stacked'>
+      <li class='navigation-header'>
+        <a href='#' class='ambari-logo'>
+          <img
+            src='/img/ambari-logo.png'
+            alt='Apache Ambari'
+            title='Apache Ambari'
+          />
         </a>
-        <div class="btn-group">
-          <span class="ambari-header" title="Apache Ambari">Ambari</span>
+        <div class='btn-group'>
+          <span class='ambari-header' title='Apache Ambari'>Ambari</span>
         </div>
       </li>
     </ul>
     <MainSideMenu />
-    <ul class="side-nav-footer nav nav-pills nav-stacked">
-      <li class="navigation-footer">
-        <a href="#" data-toggle="collapse-side-nav">
-          <span class="navigation-icon icon-double-angle-left"></span>  
+    <ul class='side-nav-footer nav nav-pills nav-stacked'>
+      <li class='navigation-footer'>
+        <a href='#' data-toggle='collapse-side-nav'>
+          <span class='navigation-icon icon-double-angle-left'></span>
         </a>
       </li>
     </ul>
-    </div>
   </div>
+</div>
