--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,3 +1,5 @@
 @import (inline) 'theme/bootstrap-ambari.css';
 @import 'application.less';
 @import 'top-nav.less';
+@import 'alerts.less';
+@import 'dashboard.less';
